--- a/.github/workflows/on-prerelease.yml
+++ b/.github/workflows/on-prerelease.yml
@@ -172,14 +172,14 @@ jobs:
           Invoke-RestMethod -Uri $url -OutFile $out
           chmod +x $out
 
-          New-Item -Path manifest -Type Directory
+          New-Item -Path sbom -Type Directory
 
           &$out generate `
               -b . `
               -pn "Ed-Fi-Meadowlark" `
               -pv ${{ env.REF }} `
               -nsb https://ed-fi.org `
-              -m manifest `
+              -m sbom `
               -ps "Ed-Fi Alliance"
 
       - name: Upload SBOM
@@ -187,7 +187,7 @@ jobs:
         uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # v3.1.2
         with:
           name: meadowlark-SBOM
-          path: ./manifest
+          path: ./sbom
           if-no-files-found: error
           retention-days: 30
 
@@ -195,4 +195,4 @@ jobs:
         id: sbom-hash-code
         shell: bash
         run: |
-          cat  ./manifest/_manifest/spdx_2.2/manifest.spdx.json.sha256 >> $GITHUB_OUTPUT
+          cat  ./sbom/_manifest/spdx_2.2/manifest.spdx.json.sha256 >> $GITHUB_OUTPUT
