--- a/.github/workflows/on-prerelease.yml
+++ b/.github/workflows/on-prerelease.yml
@@ -49,7 +49,9 @@ jobs:
         working-directory: eng/version
         run: |
           npm install
-          node ./set.js ${{ env.REF }}
+          # Temporarily hard-code
+          node ./set.js 0.3.1
+          # node ./set.js ${{ env.REF }}
 
       - name: Transpile to JS
         run: npm run build --workspaces
@@ -73,7 +75,8 @@ jobs:
           echo "; end auth token" >> $HOME/.npmrc
 
       - name: Publish
-        run: npm publish --workspaces --tag dev
+        # Temporarily disable
+        # run: npm publish --workspaces --tag dev
         # NOTE: there are uncommitted version number changes in package.json. No
         # problem! Our strategy is to rely on the tag history for version numbers,
         # not on package.json.
@@ -90,6 +93,8 @@ jobs:
   docker-publish:
     name: Publish to Docker Hub
     runs-on: ubuntu-latest
+    # Temporarily disable
+    if: 1 == 2
     needs:
       - azure-publish
     steps:
