--- a/.github/workflows/on-prerelease.yml
+++ b/.github/workflows/on-prerelease.yml
@@ -85,7 +85,7 @@ jobs:
         uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # v3.1.2
         with:
           name: npm
-          path: "*.tgz"
+          path: Meadowlark-js/*.tgz
           if-no-files-found: error
           retention-days: 30
 
