--- a/.github/workflows/on-prerelease.yml
+++ b/.github/workflows/on-prerelease.yml
@@ -246,3 +246,16 @@ jobs:
               -Headers $gh_headers `
               -InFile $uploadName
 
+  provenance-create:
+    name: Create Provenance
+    needs: azure-publish
+    permissions:
+      actions: read
+      id-token: write
+      contents: write
+    uses: Ed-Fi-Alliance-OSS/slsa-github-generator/.github/workflows/generator_generic_slsa3.yml@v1.5.0
+    with:
+      base64-subjects: ${{ needs.pack.outputs.hash-code }}
+      provenance-name: meadowlark.intoto.jsonl
+      upload-assets: true
+
